@@ -3,6 +3,7 @@
 ========================
 
 - improved HTTP cache
+- fixed parsing of schema keys in `PATCH` method
 
 ========================
 0.0.35
